union_budget_board/static/css/base.css
body {
    font-family: 'Open Sans', sans-serif;
}

.section-3col-boxes .white-box {
    position: relative;
    margin: 0 0 25px;
    padding-bottom: 25px;
    /*box-shadow: 0 0 15px rgba(0, 0, 0, .2);*/
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.19), 0 1px 3px rgba(0, 0, 0, 0.23);
}

.white-box {
    margin: 10px 0 45px;
    padding: 25px;
    background: #fff;
    min-height: 400px;
}

.section-3col-boxes .white-box h2 {
    font-weight: 600;
    margin-top: 5px;
    font-size: 22px;
}

.base-page-wrapper {
    margin-top: 70px;
    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.49);
}

.base-page-outer-wrapper {
    margin-top: 70px;
    background: rgb(233, 234, 229) url("../img/bg.png");
}

nav.navbar.navbar-default.navbar-fixed-top {
    min-height: 70px;
    padding-top: 10px;
}


@media (min-width: 959px) {
    .section-3col-boxes {
        text-align: center;
    }
    .section-3col-boxes .section-col2 {
        z-index: 2;
        margin: 0 -30px;
    }
    .section-col2 .white-box {
        min-height: 450px;
    }

    .section-3col-boxes .section-col1,
    .section-3col-boxes .section-col3 {
        z-index: 1;
        margin-top: 25px;
    }
}




.navbar-default {
    background-color: #1c2127;
    border-color: #1c2127;
}

.navbar-default .navbar-brand {
    color: #ffffff;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #f6f6f6;
}

.navbar-default .navbar-text {
    color: #ffffff;
}

.navbar-default .navbar-nav>li>a {
    color: #ffffff;
}

.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
    color: #000;
    background-color: #F8D075;
    border-radius: 5px
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #000;
    background-color: rgb(239, 183, 81);
    border-radius: 5px;
}

.navbar-default .navbar-nav>.open>a,
.navbar-default .navbar-nav>.open>a:hover,
.navbar-default .navbar-nav>.open>a:focus {
    color: #000;
    background-color: #FFA602;
}

.navbar-default .navbar-toggle {
    border-color: #206cba;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #206cba;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #ffffff;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-color: #ffffff;
}

.navbar-default .navbar-link {
    color: #ffffff;
}

.navbar-default .navbar-link:hover {
    color: #f6f6f6;
}

@media (min-width: 768px) {
    .navbar-nav>li {
        float: left;
        margin-left: 10px;
    }
    footer .logo img {
        width: 95%;
        margin-top: 50px;
    }
}

@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
        color: #ffffff;
    }
    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
        color: #f6f6f6;
    }
    .navbar-default .navbar-nav .open .dropdown-menu>.active>a,
    .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
        color: #000;
        background-color: #FFA602;
    }
}

ul.nav.navbar-nav.navbar-right {
    font-weight: 500;
    font-size: 16px;
}


.navbar button.btn {
    background: transparent;
    color: white;
}

.navbar-btn {
    margin-top: 0px;
    margin-bottom: 0px;
}
.navbar-brand i {
    font-size: 21px;
    margin-right: 6px;
}



#myFooter {
    background-color: #1c2127;
    color: white;
    padding-top: 30px;
        border-top: 4px solid white;
}

#myFooter .footer-copyright {
    background-color: #323538;
    padding-top: 3px;
    padding-bottom: 3px;
    text-align: center;
}

#myFooter .row {
    margin-bottom: 60px;
}

#myFooter .navbar-brand {
    margin-top: 45px;
    height: 65px;
}

#myFooter .footer-copyright p {
    margin: 10px;
    color: #ccc;
}

#myFooter ul {
    list-style-type: none;
    padding-left: 0;
    line-height: 1.7;
}

#myFooter h5 {
    font-size: 18px;
    color: white;
    font-weight: bold;
    margin-top: 30px;
}

#myFooter h2 a {
    font-size: 50px;
    text-align: center;
    color: #fff;
}

#myFooter a {
    color: #d2d1d1;
    text-decoration: none;
}

#myFooter a:hover,
#myFooter a:focus {
    text-decoration: none;
    color: white;
}

#myFooter .social-networks {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 16px;
}

#myFooter .social-networks a {
    font-size: 32px;
    color: #f9f9f9;
    padding: 10px;
    transition: 0.2s;
}

#myFooter .social-networks a:hover {
    text-decoration: none;
}

#myFooter .facebook:hover {
    color: #0077e2;
}

#myFooter .google:hover {
    color: #ef1a1a;
}

#myFooter .twitter:hover {
    color: #00aced;
}

#myFooter .btn {
    color: black;
    background-color: #52A7FE;
    border-radius: 10px;
    border: none;
    width: 150px;
    display: block;
    margin: 0 auto;
    margin-top: 10px;
    line-height: 25px;
}

@media screen and (max-width: 767px) {
    #myFooter {
        text-align: center;
    }
}

body {
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
    height: 100%;
}

.content {
    flex: 1 0 auto;
    -webkit-flex: 1 0 auto;
    min-height: 200px;
}

#myFooter {
    flex: 0 0 auto;
    -webkit-flex: 0 0 auto;
}


a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

sub.app-version {
    color: #F8D075;
    margin-left: -1px;
    font-size: .4em;
}

